# ComfyUI-Touchpad-Gestures

./: README.md  __init__.py  pyproject.toml
web/css/: touchpadSupport.css
web/js/: touchpadSupport.js
